k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cexvscex
  labels:
    app.kubernetes.io/part-of: cexvscex
